# BMKG-test

./: .gitignore  Cargo.toml  LICENSE  README.md  bmt_train.sh  main.py  nohup.out  pyproject.toml  requirements.txt  setup.py  train.py  trainer.py
.github/workflows/: CI.yml  check.py  metis.patch  style.yaml
bmkg/: __init__.py  _data.pyi  main.py  train.py  train_inner.py  trainer.py
bmkg/config/: __init__.py  init_config.py
bmkg/data/: __init__.py  data.py  dataset.py  loader.py  module.py  sampler.py
bmkg/models/: __init__.py  model.py
bmkg/models/bigmodel/: __init__.py  coke.py  coke_bmtrain.py  kepler.py
bmkg/models/bmtlayers/: __init__.py
bmkg/models/semantic/: analogy.py  base_semantic.py  complex.py  distmult.py  hole.py  rescal.py  rotate.py  simple.py
bmkg/models/transx/: base_trans.py  transd.py  transe.py  transh.py  transr.py  transx.py
bmkg/preprocess/: __main__.py  kepler_preprocess.py  process.py
checkpoints/: eval_result.json  preprocess.py
checkpoints/fb15k237/: eval_result.json
config/: init_config.py
data/: dcoke_dataset.py
models/bigmodel/: coke.py  coke_bmtrain.py
old/: main.py  main_kepler.py  trainer_kepler.py
preprocess/: coke_preprocess.py
src/: lib.rs
src/data/: data.rs  dataset.rs  mod.rs  module.rs
src/preprocess/: mod.rs
talk/: talk.tex
