[package]
name = "bmkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bmkg"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module", "abi3", "abi3-py39"] }
numpy = "0.16.2"
pyo3-log = "0.6.0"
tokio = {version = "1.17.0", features = ["full"]}
metis = "0.1.1"
log = "0.4.16"
rayon = "1.5.1"
ndarray = {version = "0.15.4", features=["rayon"]}
indicatif = {version = "0.16.2", features = ["rayon"]}
lasso = "0.6.0"
quick-error = "2.0.1"
serde_json = "1.0.79"
rand = "0.8.5"
